--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body, html {
 
   .bg-image{
     
-    background-image: url("../images/frozen-forest.jpg");
+    background-image: url("images/frozen-forest.jpg");
     min-height: 96.7%;
     position: relative;
     opacity: 0.85;
